# ChangeLog for app-crypt/dogtag-pki-ca-ui
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +dogtag-pki-ca-ui-1.3.0.ebuild, +metadata.xml:
  initial commit
