@@ -1,6 +1,6 @@
 AUX gentoo.patch 1407 RMD160 747e2999be51ee4e35844f22e73c10f3ec3da48c SHA1 601045dbaa7f4fbec2e05c7d5091df3aea2e44fa SHA256 276383a9733809ff797c7681de5a1cf6b95d0ef642db9be8d3209aafcb470d18
 DIST pki-console-1.3.2.tar.gz 499196 RMD160 d6c8e12bbced3115dce18959e4a5704362a1949c SHA1 655a4cdc909c9e5e2f22b9abb1547347e09e9a9a SHA256 471cf07709cb162ff47bd7c913c5fc81cf4fb7e85380f6177972b9033699a71f
 DIST pki-fedora.png 11606 RMD160 766c23052bd3f6d323e80f4b702e47e31d8b7671 SHA1 61bb2229f459323809bfa4768a0b9928c06bcb63 SHA256 88318e1704924c7d33aac3e37c195f99d29eb6f6f6235f254f254881257bbb0e
-EBUILD pki-console-1.3.2.ebuild 1707 RMD160 f7c4e5de977f4a52e5a14c8705e3bd49810baee8 SHA1 f4e1e6cb8c4eb57f60206bd8bd7a82b807a06c0d SHA256 6c17491d77ed19c46c62c593416bbbd70fb3e000b81725445472b8bd0e175124
+EBUILD pki-console-1.3.2.ebuild 1694 RMD160 4e64ee2a3d11e6417f5c55d91eb82b3765ffc3c1 SHA1 c10bd19f7e927ac7732ff330dcd723ddcb77099b SHA256 62a487bdc250b02748893bebb6f6db24ad3f402c3b8525a48eaa72a7c994f863
 MISC ChangeLog 673 RMD160 cca83272c0ac98daa96dc8fbd843b0af9db2fcc3 SHA1 15ed2a0e9fde6fd23f74010dacf3b9d2cc04f460 SHA256 ec6fd861105d0edb2e0641ce7975cc671435b91749de531cf3ffce299bb75dc3
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
