@@ -1,4 +1,4 @@
-DIST dogtag-pki-ca-ui-1.3.0.tar.gz 282914 RMD160 07896f5ae7b7b6c8fa28f148c4c40a1f41c0b706 SHA1 fafcf9fae985c40a84d65389a0f78a73444ab038 SHA256 bfc143f7c6e4ead40022008a7cf0a8ea5cad39ddeeffba4a8276ad3849580919
-EBUILD dogtag-pki-ca-ui-1.3.0.ebuild 591 RMD160 68b18d781e153d2e527b1870a84e5b9359c599f9 SHA1 20d38212bdde78e49ccbcd0a053269ad445a8997 SHA256 ca3c0b5d8b1e4e764ec6b692b756d9f7f4e19d9b21040868ab1db7f4974503d0
-MISC ChangeLog 247 RMD160 459ea65c8d06f8ecdf0d5bb9cecd0773169beeb3 SHA1 dd6538ea0e373ae7117ad45a6732095d7ada655c SHA256 3fe7ebfd8ffb117296f4eb5665b146ec1c793dd9509525d8c2ff4455462a7afd
+DIST dogtag-pki-ca-ui-1.3.1.tar.gz 283883 RMD160 67cd306481ca5e25064f66d62a7bd491da2c6464 SHA1 4e82e5f064c0ba34148ad46a5abb3e7ce398aebb SHA256 63591e1bd244181c0f5b16238d65dc2eb52701d07fc14eb06085f2b129292ae7
+EBUILD dogtag-pki-ca-ui-1.3.1.ebuild 591 RMD160 68b18d781e153d2e527b1870a84e5b9359c599f9 SHA1 20d38212bdde78e49ccbcd0a053269ad445a8997 SHA256 ca3c0b5d8b1e4e764ec6b692b756d9f7f4e19d9b21040868ab1db7f4974503d0
+MISC ChangeLog 374 RMD160 7cb0b8109b91b3cd53e1e5b21e670807fea2d721 SHA1 f2687e01946c028c078e5318a4d205e8e2f33d90 SHA256 dd9ca8fc88e8596f6850cc3bc718e5aaf7b60510da24bb778b6bbe54edcf1cb8
 MISC metadata.xml 458 RMD160 a02c4dbfcbad30ce82c2871302980d5803ee5f79 SHA1 12a6f722e3613f20e7a604ac1e258f34ebe99bbb SHA256 a0c35885398d3d8ad3865f343b226616f84fcc5b017456ce678add056b56e431
