@@ -1,4 +1,4 @@
-DIST dogtag-pki-console-ui-1.3.0.tar.gz 87568 RMD160 8b9a5d8a522c0b97f4187528a49cb97d4cd3fdad SHA1 78470239d748090ede466fc5f4423ca7fe4429b2 SHA256 167b1dc19de7e8d8f7604e9704762b78b3d8a954fc27da0891214cbd5d29b8ed
-EBUILD dogtag-pki-console-ui-1.3.0.ebuild 1000 RMD160 1f14aee4b3df222f2a0a14fade0fc66abf792674 SHA1 5694be9c07d0a3ee3df4fb200d6f8cc68da5b28a SHA256 d88dcf6ed2767abd3591161fcaa7de38d3316b0fcce5eba5567f3c18c7df3ec0
-MISC ChangeLog 286 RMD160 3f44bfd9724b3c5cdfdcc76c95c5ac00b20d7d8b SHA1 de37400acf87766faa8355280f4586ab10e07143 SHA256 7d8b81469ffc6de3b9d931279ad5d1d05f57ffb4cc3c6d186a9304414d2d6b98
+DIST dogtag-pki-console-ui-1.3.2.tar.gz 88285 RMD160 4050b55a1592d3d7ce3622e640ad1baea014bd37 SHA1 5854783674e75a06f36e7a2b2083d4a8206576d2 SHA256 c5a13308cfcad23bbfbdef7abe33c29e2ef1b4a46c144972182bcbf7d8ac6a41
+EBUILD dogtag-pki-console-ui-1.3.2.ebuild 1058 RMD160 e6995796db93065a96b57080ee7e345a7c55a96f SHA1 278c45a516d38f2d504025c1f64c7b2a8f753fde SHA256 c42f5207bec7481e882307b30675eb235f1c8c9b4bba1fc2d13c78208d6f4597
+MISC ChangeLog 423 RMD160 36bbf7c4ecdfdccde3f2a516dfd9976f67286396 SHA1 d0c86e98a0f651d788833162ce77bc2b136dc61e SHA256 61df5b240bc9f00d0a658328f8c2be365a9baf9f48bac7361434ef4a828ee42f
 MISC metadata.xml 448 RMD160 3d0c233dfa128a1e58f9c065fa944f73ab347d58 SHA1 317a6394ae4fc1cbb4bb7024588596a3ca0413c4 SHA256 9c36935caf262b5e2ec3f36ee0fad9c9df57f409701017edf31d7c86710d1cd1
